# meshfix-cmake

./: .gitignore  CMakeLists.txt  build_meshfix.sh  meshfix.m
include/TMesh/: tin.h
src/Algorithms/: CMakeLists.txt  CMakeLists.txt~
src/Kernel/: CMakeLists.txt  tmesh.cpp
src/MeshFix/: CMakeLists.txt
src/TMesh/: CMakeLists.txt  io.cpp  io_matlab.cpp
src/mat_meshfix/: CMakeLists.txt  mat_meshfix.cpp
